--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+__pycache__/
 *.pyc
-*.DS_Store
+.venv/
+venv/
+.env
+.ipynb_checkpoints/
+data/
+datasets/
+logs/
+outputs/
+runs/
+checkpoints/
+*.pt
+*.pth
+*.bin
+*.h5
+.vscode/
