--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 tensorflow==1.11.0
+protobuf==3.5.2.post1
 networkx==1.11
 numpy==1.14.4
 scipy==1.1.0
@@ -6,4 +7,4 @@ dill==0.2.7.1
 scikit-learn==0.19.1
 pandas==0.23.1
 matplotlib==2.2.2
-ipykernel==4.8.2
+ipykernel==4.8.2 
